Add debugging log